--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,14 +14,15 @@
 # limitations under the License.
 dubbo.application.name=dubbo-monitor
 dubbo.application.owner=
-dubbo.registry.address=zookeeper://192.168.1.114:2181?backup=192.168.1.114:2182,192.168.1.114:2183
+dubbo.registry.address=zookeeper://192.168.1.174:2181
 dubbo.protocol.port=6060
 
 # Database Settings
-db.url=jdbc:mysql://default:3306/dubbokeeper?prepStmtCacheSize=517&cachePrepStmts=true&autoReconnect=true&characterEncoding=utf-8
-db.username=root
-db.password=raycool
-db.maxActive=500
+db.url=jdbc:h2:file:./dubbokeeper;DB_CLOSE_DELAY=-1;MODE=MySQL;
+#db.username=root
+#db.password=root
+#db.maxActive=500
+db.initScript=sql-script/h2/create.sql
 
 # System Manager
 manager.username=admin
